tests/snapshots/game_board_tests__T rotated once.snap
---
source: tests/game_board_tests.rs
expression: renderer.pop_snapshot()
---
|          |
|          |
|          |
|     +    |
|    ++    |
|     +    |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|    xxxx  |
------------
