tests/snapshots/game_board_tests__board after 14 ticks.snap
---
source: tests/game_board_tests.rs
expression: renderer.get_snapshot()
---
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|    ++    |
|    ++    |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
------------
