tests/snapshots/game_board_tests__board after 2 ticks.snap
---
source: tests/game_board_tests.rs
expression: renderer.get_snapshot()
---
|    ++    |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
------------
