tests/snapshots/game_board_tests__board after 25 ticks.snap
---
source: tests/game_board_tests.rs
expression: renderer.pop_snapshot()
---
|    +     |
|    +     |
|    +     |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|    xx    |
|    xx    |
------------
