tests/snapshots/game_board_tests__board after 45 ticks.snap
---
source: tests/game_board_tests.rs
expression: renderer.pop_snapshot()
---
|    ++    |
|    ++    |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|    x     |
|    x     |
|    x     |
|    x     |
|    xx    |
|    xx    |
------------
