tests/snapshots/game_board_tests__board after moving left twice.snap
---
source: tests/game_board_tests.rs
expression: renderer.get_snapshot()
---
|          |
|  ++      |
|  ++      |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
------------
